--- a/second_week/文件处理.md
+++ b/second_week/文件处理.md
@@ -1,18 +1,142 @@
-# 文件处理
-
-## 打开和关闭文件
-1. 我们使用 open() 函数打开文件。这个函数将返回一个文件对象，我们对文件的读写都将使用这个对象。
-2. open() 函数需要两个参数，第一个参数是文件路径或文件名，第二个是文件的打开模式。模式通常是下面这样的：
-
-* "r"，以只读模式打开，你只能读取文件但不能编辑/删除文件的任何内容
-* "w"，以写入模式打开，如果文件存在将会删除里面的所有内容，然后打开这个文件进行写入
-* "a"，以追加模式打开，写入到文件中的任何数据将自动添加到末尾
-* "b"，以二进制的方式打开
-
-3. 我们使用方法 close() 完成关闭，重复关闭不会有任何影响：
-4. 使用 with 语句处理文件对象，它会在文件用完后自动关闭，就算发生异常也没关系。它是 try-finally 块的简写：
-
-## 读取文件内容
-1. 写入两个输入： write("{} {}".format(a,b))
-
-
+# 文件处理    
+    
+## 打开和关闭文件    
+1. 我们使用 open() 函数打开文件。这个函数将返回一个文件对象，我们对文件的读写都将使用这个对象。    
+2. open() 函数需要两个参数，第一个参数是文件路径或文件名，第二个是文件的打开模式。模式通常是下面这样的：    
+    
+* "r"，以只读模式打开，你只能读取文件但不能编辑/删除文件的任何内容    
+* "w"，以写入模式打开，如果文件存在将会删除里面的所有内容，然后打开这个文件进行写入    
+* "a"，以追加模式打开，写入到文件中的任何数据将自动添加到末尾    
+* "b"，以二进制的方式打开    
+    
+3. 我们使用方法 close() 完成关闭，重复关闭不会有任何影响：    
+4. 使用 with 语句处理文件对象，它会在文件用完后自动关闭，就算发生异常也没关系。它是 try-finally 块的简写：    
+    
+## 读取文件内容    
+1. 使用read()可以一次性读取整个文件的内容到字符串。项目开发中，我们需要谨慎使用 read() 读取整个文件，因为有可能你的系统内存并不足够存储整个文件的内容。当 read() 执行后，再次执行将不会有任何内容的输出。    
+2. 在处理文本文件的时候，我们通常会采用逐行处理，readline() 就是用来每次读取文件的一行，readlines() 可以读取所有行，但不同于 read()，这个函数返回的是一个列表，列表中每个元素都是对应文本文件中一行内容的字符串：    
+```python    
+with open(filename,'r') as file:    
+	for line in file.readlines():    
+		print(line)    
+```    
+    
+    
+    
+## 写入文件    
+1. 打开文件时，要用写入模式。    
+```python    
+with open(filename,'w') as file:    
+	file.write('content')    
+```    
+    
+## pickle和JSON序列化    
+1. 你需要将一个Python对象序列化为一个字节流，以便将它保存到一个文件、存储到数据库或者通过网络传输它。    
+    
+### pickle    
+1. 我们首先通过一个实例将 Python 的一个字典存入到文件中并读取出来恢复成字典对象，这个过程中用的就是 pickle 模块：    
+```python    
+>>> import pickle    
+>>> courses = { 1:'Linux', 2:'Vim', 3:'Git'}    
+>>> with open('./courses.data', 'wb') as file:    
+...     pickle.dump(courses, file)    
+...    
+>>> with open('./courses.data', 'rb') as file:    
+...     new_courses = pickle.load(file)    
+...    
+>>> new_courses    
+{1: 'Linux', 2: 'Vim', 3: 'Git'}    
+>>> type(new_courses)    
+<class 'dict'>    
+>>>    
+```    
+注意写入和读取文件都需要使用 b 二进制模式。    
+    
+2. 最终我们写入文件并读取后仍然可以恢复到原来的字典对象。如果只是想将对象序列化成一个字节流，那可以使用 pickle.dumps(obj)。    
+    
+3. 为了将一个对象转储为一个字符串，可以使用 pickle.dumps() ：    
+```python    
+s = pickle.dumps(data)    
+```    
+    
+### JSON    
+1. JSON(JavaScript Object Notation, JS 对象标记)是一种轻量级的数据交换格式。JSON 格式在互联网应用开发中应用非常广泛，可以作为不同的服务组件之间进行数据传递的格式。在互联网应用提供的各种 API 接口返回值基本都是 JSON 格式。    
+```python    
+>>> import json  # 引入模块    
+>>> courses = {1: 'Linux', 2: 'Git', 3: 'Vim'}  # 字典对象    
+>>> json.dumps(courses)  # dumps 方法将字典转换成 json 格式的字符串    
+'{"1": "Linux", "2": "Git", "3": "Vim"}'    
+>>> with open('courses.json', 'w') as f:      
+...     f.write(json.dumps(courses))  # json 格式的字符串可直接写入 json 文件    
+...    
+38    
+>>> with open('courses1.json', 'w') as f:    
+...     json.dump(courses, f)  # dump 方法可将字典进行序列化并存入文件    
+...    
+```    
+    
+2. JSON 读取文件    
+```python    
+>>> json_str = json.dumps(courses)    
+>>> json_str    
+'{"1": "Linux", "2": "Git", "3": "Vim"}'    
+>>> data1 = json.loads(json_str)  # loads 方法将 json 字符串反序列化为字典 / 列表    
+>>> data1    
+{'1': 'Linux', '2': 'Git', '3': 'Vim'}    
+>>> with open('courses.json', 'r') as f:  # 'r' 参数为默认参数，可省略不写    
+...     data2 = json.load(f)  # load 方法将 json 文件反序列化为字典 / 列表    
+...    
+>>> data2    
+{'1': 'Linux', '2': 'Git', '3': 'Vim'}    
+```    
+    
+## CSV文件读写    
+1. CSV 即 Comma Separate Values（逗号分隔值）的缩写，顾名思义，文件内容是由逗号进行分隔的一列一列的数据，具有编辑方便、可视化效果优良的特点。 Python 的 csv 模块专门用于处理 CSV 文件，下面举例来说明。    
+    
+### csv模块读文件    
+    
+```python    
+# 读取文件，用 reader 读取的结果是个迭代器，文件关闭后此迭代器无法读取数据    
+# 迭代器的概念会在下一节实验中讲到，这里只需记住命令的用法即可    
+>>> import csv   # 引入模块    
+>>> with open('test.csv') as f:    
+...     data = csv.reader(f)   # reader 方法读取文件    
+...    
+>>> from collections.abc import Iterator   # 引入 Iterator 类    
+>>> isinstance(data, Iterator)   # 判断 data 的数据类型是否为迭代器    
+True    
+>>> next(data)   # 正如前面的注释所说，csv.reader 方法的处理结果为迭代器，且文件关闭后无法读取数据    
+Traceback (most recent call last):    
+File "<stdin>", line 1, in <module>    
+ValueError: I/O operation on closed file.    
+```    
+    
+```python    
+# 可以把读取到的数据转换成 tuple 或 list    
+# tuple 或 list 里每个元素都是列表，每个子列表里的元素都是字符串    
+>>> with open('test.csv') as f:    
+...     data = list(csv.reader(f))   # list 方法将迭代器进行迭代并将结果转换为列表数据    
+...    
+>>> type(data)   # data 的数据类型变成列表    
+<class 'list'>    
+>>> for i in data:   # 列表内每个元素也都是列表，对应 CSV 文件中的一行数据    
+...     print(i)    
+...    
+['Symbol', 'Price', 'Date', 'Time', 'Change', 'Volume']    
+['AA', '39.48', '6/11/2007', '9:36am', '-0.18', '181800']    
+['AIG', '71.38', '6/11/2007', '9:36am', '-0.15', '195500']    
+['AXP', '62.58', '6/11/2007', '9:36am', '-0.46', '935000']    
+['BA', '98.31', '6/11/2007', '9:36am', '+0.12', '104800']    
+['C', '53.08', '6/11/2007', '9:36am', '-0.25', '360900']    
+['CAT', '78.29', '6/11/2007', '9:36am', '-0.23', '225400']    
+```    
+    
+### csv模块写文件    
+```python    
+# csv.writer(f) 是一个具有 writerow 和 writerows 方法的 _csv.writer 类的实例    
+# 如果只写入一行，则使用 writerow 方法    
+# 由于 data 是读取多行文件的结果，所以下面使用是 writerows 方法写入数据    
+>>> with open('test_w.csv', 'w') as f:    
+...     csv.writer(f).writerows(data)    
+...    
+```    
